<package format="3">
  <name>utils</name>
  <version>0.0.1</version>
  <description>Shared utilities</description>
  <maintainer email="dev@personal.com">Dev Personal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>shm_interfaces</depend>

</package>
